# DiffuseCraft

./: .gitignore  README.md  app.py  constants.py  image_processor.py  pyproject.toml  requirements.txt  utils.py
stablepy/diffusers_vanilla/: model.py  sampler_scheduler_config.py
stablepy/diffusers_vanilla/extra_scheduler/: scheduling_euler_discrete_variants.py  scheduling_flow_match_dpmsolver_multistep.py
stablepy/diffusers_vanilla/preprocessor/: constans_preprocessor.py  image_utils.py  main_preprocessor.py
stablepy/diffusers_vanilla/preprocessor/controlnet_aux_beta/: preprocessor_utils.py
stablepy/diffusers_vanilla/preprocessor/transformers_lib/: pipelines.py
stablepy/diffusers_vanilla/sd_embed/: prompt_parser.py
stablepy/face_restoration/: codeformer.py  face_restoration_utils.py  gfpgan.py  main_face_restoration.py  restoreformer.py
stablepy/upscalers/: main_upscaler.py  utils_upscaler.py
stablepy/upscalers/pipelines/: base.py  common.py  scunet.py  swinir.py
